<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myjamia.ui.personalData.PersonalDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.personalData.PersonalDataActivity">

        <ImageView
            android:id="@+id/personal_data_back_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/personal_data_back_button_desc"
            android:focusable="true"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_tint" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/personal_data_label_personal_data"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/personal_data_back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/personal_data_back_btn" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image_cv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:shadowColor="@color/card_shadow_color"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                app:cardBackgroundColor="@color/card_bg_color"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/personal_data_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_image_desc"
                    android:src="@drawable/ic_profile" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_profile_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-8dp"
            android:layout_marginBottom="-8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:shadowColor="@color/card_shadow_color"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_cv"
            app:layout_constraintEnd_toEndOf="@+id/profile_image_cv">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:contentDescription="@string/personal_data_edit_profile_desc"
                android:src="@drawable/ic_edit"
                app:tint="@color/purple" />

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_cv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <!--                Jamia Id-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_jamia_id" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PersonalDataFieldsTilStyle"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.jamiaId}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                First Name-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_first_name" />

                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.firstName}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Last Name-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_last_name" />

                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.lastName}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Gender-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_gender_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/male_radio_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_regular">

                        <RadioButton
                            android:id="@+id/male_radio"
                            style="@style/PersonalDataRbStyle"
                            android:buttonTint="@color/purple"
                            android:text="@string/personal_data_label_gender_male" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/female_radio_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_regular">

                        <RadioButton
                            android:id="@+id/female_radio"
                            style="@style/PersonalDataRbStyle"
                            android:buttonTint="@color/purple"
                            android:text="@string/personal_data_label_gender_female" />
                    </LinearLayout>
                </LinearLayout>


                <!--                Father's Name-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_father_name" />


                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/father_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.fatherName}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Roll No-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_roll_no" />

                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/roll_no_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:text="@={viewModel.rollNo}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--               Personal Email-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_personal_email" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PersonalDataFieldsTilStyle"
                    app:suffixText="\@gmail.com">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.personalEmail}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Student's Email-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_student_email" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PersonalDataFieldsTilStyle"
                    app:suffixText="\@st.jmi.ac.in">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.studentEmail}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Mobile Number-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_mobile_no" />

                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_no_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.mobileNo}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Date of Birth-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_dob" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dob_til"
                    style="@style/PersonalDataFieldsTilStyle"
                    app:endIconDrawable="@drawable/ic_calender"
                    app:endIconMode="custom"
                    app:endIconTint="@color/purple">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:text="@={viewModel.dob}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Address-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_address" />

                <com.google.android.material.textfield.TextInputLayout style="@style/PersonalDataFieldsTilStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.address}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Course-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_course" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PersonalDataFieldsTilStyle"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/course_actv"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="none"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@={viewModel.course}" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--                Department-->
                <TextView
                    style="@style/PersonalDataFieldsTvStyle"
                    android:text="@string/personal_data_label_department" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PersonalDataFieldsTilStyle"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/department_actv"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="none"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@={viewModel.department}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_profile_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/purple"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/personal_data_update_profile_btn"
                    app:cornerRadius="50dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>