<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:background="@drawable/wave1"
            android:scaleX="-4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image_cv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:shadowColor="@color/card_shadow_color"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_image_desc"
                android:src="@drawable/ic_profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_label_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/profile_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_image_cv"
            app:layout_constraintTop_toTopOf="@+id/profile_image_cv" />

        <TextView
            android:id="@+id/profile_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_label_description"
            android:textColor="#C3C3C3"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_cv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_image_cv"
            app:layout_constraintTop_toBottomOf="@+id/profile_username" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_cv">

            <LinearLayout
                android:id="@+id/personal_data_btn"
                style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_person"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_personal_data" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_settings"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_settings" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_feedback"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_feedback" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_faq"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_faq" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_about"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_about" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout_btn"
                style="@style/ProfileItemLayoutStyle">

                <androidx.cardview.widget.CardView style="@style/ProfileIconsStyle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_logout"
                        app:tint="@color/purple_700"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>


                <TextView
                    style="@style/ProfileItemTextStyle"
                    android:text="@string/profile_label_logout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_right_arrow"
                    app:tint="@color/icon_tint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/terms_of_use"
                android:textColor="@color/text_color"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/privacy_policy"
                android:textColor="@color/text_color"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>